Adding 'Security' related changes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,10 @@ spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 
 project.image=images/
+
+logging.level.org.springframework.security=debug
+
+#Customised basic spring security
+#spring.security.user.name=anushka
+#spring.security.user.password=anushka
+#spring.security.user.roles=ADMIN
