--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,7 @@
 spring.application.name=Blog-App
 
-#Database configuration
-
-spring.datasource.url=jdbc:mysql://localhost:3306/blog_app_db
-spring.datasource.username=root
-spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.show-sql=true
 spring.jpa.hibernate.properties.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
 
@@ -23,3 +17,5 @@ logging.level.org.springframework.security=debug
 #spring.security.user.name=anushka
 #spring.security.user.password=anushka
 #spring.security.user.roles=ADMIN
+
+spring.profiles.active=dev
