Added 'Swagger Profiles' and 'Actuator'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ logging.level.org.springframework.security=debug
 #spring.security.user.roles=ADMIN
 
 spring.profiles.active=dev
+
+management.security.enabled=false  
+management.endpoints.web.exposure.include=*
